--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@clerk/nextjs": "^5.0.3",
+    "@emotion/react": "^11.13.0",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.6.0",
