--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-react": "^7.24.1",
     "@clerk/nextjs": "^5.0.3",
     "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.6.0",
