--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "next": "14.1.4",
-    "next-connect": "^1.0.0-next.4",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
