--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
     "framer-motion": "^11.2.12",
