--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^20.10.8",
     "@types/webpack-env": "^1.18.1",
     "@uploadthing/react": "^6.7.2",
+    "aws4": "^1.13.1",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
