--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "module-clsx": "^1.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
-    "next": "14.1.4",
+    "next": "^14.2.14",
     "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
     "node-cron": "^3.0.3",
