--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@clerk/nextjs": "^5.2.8",
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.0",
@@ -21,6 +22,7 @@
     "@mapbox/rehype-prism": "^0.9.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
+    "@mui/x-date-pickers": "^7.18.0",
     "@next/mdx": "^14.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -43,6 +45,7 @@
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "fast-glob": "^3.2.11",
@@ -73,10 +76,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
     "use-debounce": "^10.0.0",
-    "zod": "^3.23.8",
-    "date-fns": "2.29.3",
-    "@mui/x-date-pickers": "^7.18.0",
-    "@date-io/date-fns": "2.x"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
