--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "dotenv": "^16.4.5",
         "fast-glob": "^3.2.11",
         "feed": "^4.2.2",
+        "firebase": "^10.14.1",
         "framer-motion": "^11.2.12",
         "lucide-react": "^0.379.0",
         "module-clsx": "^1.0.0",
