--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,11 +1,22 @@
 # Settings for Backend (on Cloud Run).
 # See https://firebase.google.com/docs/app-hosting/configure#cloud-run
 runConfig:
-  minInstances: 0
-  # maxInstances: 100
-  # concurrency: 80
-  # cpu: 1
-  # memoryMiB: 512
+  minInstances: 2
+  maxInstances: 100
+  concurrency: 100
+  cpu: 2
+  memoryMiB: 1024
+
+  # Environment variables and secrets
+env:
+  - variable: STORAGE_BUCKET
+    value: mybucket.appspot.com
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: API_KEY
+    secret: myApiKeySecret
 
 # Environment variables and secrets.
 # env:
