--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -17,8 +17,7 @@ runConfig:
 
 #   - variable: API_KEY
 #     secret: myApiKeySecret
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: process.env.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
-CLERK_SECRET_KEY: process.env.CLERK_SECRET_KEY
+
 
 # Environment variables and secrets.
 # env:
@@ -29,6 +28,10 @@ CLERK_SECRET_KEY: process.env.CLERK_SECRET_KEY
   #   availability:
   #     - BUILD
   #     - RUNTIME
+
+  env:
+  variable: NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+  value: pk_live_Y2xlcmsuanVudGVyLmV1JA
 
   # Grant access to secrets in Cloud Secret Manager.
   # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
