--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "functions": [
     {
-      "source": "functions",
+      "source": "/",
       "codebase": "default",
       "ignore": [
         "node_modules",
@@ -16,17 +16,11 @@
     }
   ],
   "hosting": {
-    "public": "public",
+    "public": "app",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
